--- a/.github/workflows/update-package.yml
+++ b/.github/workflows/update-package.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [master,19.07,openwrt-18.06,openwrt-18.06-k5.4,openwrt-21.02]
+        target: [master]
         
     steps:
     - name: Checkout
