--- a/.github/workflows/update-package.yml
+++ b/.github/workflows/update-package.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: 40 5 * * 6
+    - cron: 40 3 * * *
 
 env: 
   REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [master]
+        target: [master,19.07,openwrt-21.02,lede-17.01]
         
     steps:
     - name: Checkout
@@ -34,7 +34,6 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        
     - name: Clone packages
       run: |
         cd $GITHUB_WORKSPACE
